--- a/index.html
+++ b/index.html
@@ -1818,7 +1818,7 @@
                             <tr>
                                 <td>Eliminación</td>
                                 <td>Quitar un animal</td>
-                                <td>Generalmente rápido</td>
+                                <td>Generalmente rápido con los coeficientes opuestos</td>
                                 <td>Necesita cálculos</td>
                             </tr>
                         </tbody>
