--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistemas de Ecuaciones 2x2 - Aprende con Animales</title>
+    <title>SYSTEMMATH</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Bangers&family=Nunito:wght@400;600;700;800&family=Chewy&family=Luckiest+Guy&family=Kalam:wght@300;400;700&family=Baloo+2:wght@400;600;700&family=Varela+Round&family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -1663,7 +1663,7 @@
     </div>
     <div class="container">
         <header>
-            <h1><i class="fas fa-paw"></i> Sistemas de Ecuaciones con Animales</h1>
+            <h1><i class="fas fa-paw"></i> SYSTEMMATH- Sistemas de Ecuaciones con Animales</h1>
             <p class="subtitle">Aprende de manera divertida los sistemas de ecuaciones con la ayuda de animales y juegos interactivos</p>
         </header>
         <div class="tabs">
